--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -47,18 +47,18 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/letgo/jobs/1792118'>Job Application for Business Intelligence Analyst at letgo</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence & Reporting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://finleap.recruitee.com/o/lead-business-intelligence-manager-fmdiv-for-a-new-finleap-venture'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finleap.recruitee.com/o/lead-business-intelligence-manager-fmdiv-for-a-new-finleap-venture'>
       (Lead) Business Intelligence Manager (f/m/div) for a new finleap venture - FinLeap GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -69,7 +69,7 @@
 <p>Jul 17, 2019 ... Apply online for the job of Enterprise Business Intelligence Manager at iland 
 Internet Solutions Corporation.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/livescore/jobs/1760613'>Job Application for Business Intelligence Analyst - LiveScore at LiveScore</a></h5> 
+<h5><a href='https://boards.greenhouse.io/livescore/jobs/1760613'>Job Application for Business Intelligence Analyst - LiveScore at LiveScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -98,7 +98,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
-<h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -111,7 +111,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -144,7 +144,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999692170513-business-intelligence-engineer'>LeoVegas.com Business Intelligence Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999692170513-business-intelligence-engineer'>LeoVegas.com Business Intelligence Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -152,11 +152,11 @@ Technologies Inc.</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999692149688-junior-business-intelligence-analyst'>Gameloft Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999692149688-junior-business-intelligence-analyst'>Gameloft Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/chu3dynstennnrzaegkett8dra'>Business Intelligence Architect 2 (16062) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/chu3dynstennnrzaegkett8dra'>Business Intelligence Architect 2 (16062) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -281,11 +281,11 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692018235-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692018235-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -374,7 +374,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1782194'>Job Application for Product Business Intelligence Analyst at Box</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1782194'>Job Application for Product Business Intelligence Analyst at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -404,7 +404,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746970'>Job Application for Business Intelligence Analyst at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746970'>Job Application for Business Intelligence Analyst at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
