--- a/android-engineer.html
+++ b/android-engineer.html
@@ -46,6 +46,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://aicure.workable.com/j/75018C791D'>AiCure - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/averityteam/job/x5f7khwesewogrxqugzwc39pdo'>Senior Android Engineer | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -90,7 +94,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/72f84fd6-297a-4479-b20c-f52c45aebebc'>Quizlet - Android Software Engineer, Team Engagement</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/72f84fd6-297a-4479-b20c-f52c45aebebc'>Quizlet - Android Software Engineer, Team Engagement</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -112,7 +116,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
+<h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -136,7 +140,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA Vancouver, BC</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -144,7 +148,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -189,11 +193,11 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4341919002'>Job Application for Android Engineer  at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4341919002'>Job Application for Android Engineer  at Twitch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -297,12 +301,12 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/joyn/b511fd47-8db2-4e13-b05c-4f16716451f2'>Joyn GmbH - Senior Android Engineer (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/joyn/b511fd47-8db2-4e13-b05c-4f16716451f2'>Joyn GmbH - Senior Android Engineer (m/f/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Minimum of 5 years of experience as an app developer and at least 3 as Android 
 developer. You're experienced when it comes to improving your colleagues?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wattpad/630ca13e-fd65-4ed2-877e-f406060d60d8'>Wattpad - Android Engineer, Premium</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wattpad/630ca13e-fd65-4ed2-877e-f406060d60d8'>Wattpad - Android Engineer, Premium</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -386,7 +390,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/twitch/a5ae8f78-5305-437b-813c-dbe48a70119a?lever-via=8XvwdcNuRH'>Twitch - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/twitch/a5ae8f78-5305-437b-813c-dbe48a70119a?lever-via=8XvwdcNuRH'>Twitch - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-24</p>
 <hr/>
@@ -455,10 +459,6 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/gojek/bf03ad3e-5662-4dfd-8a3a-8fbfae12fe7b'>GOJEK - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
-<p>Posted on: 2019-06-20</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/QuandooGmbH1/743999690147579-android-engineer-m-f-x-'>Quandoo GmbH Android Engineer (m/f/x) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
 
